[package]
name = "axumser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1", features = ["ws", "headers"] }
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
postgres = "0.19.2"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "any", "postgres", "time", "all-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"